--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,13 +1,17 @@
-.page-section{
-    
+.page-section {
+
     padding: 1.2rem 0;
-    
-    @mixin atMedium{
-    padding: 4.5rem 0;
+
+    @mixin atMedium {
+        padding: 4.5rem 0;
     }
-    
-    &--blue{
+
+    &--blue {
         background-color: $mainBlue;
-        color: #FFF; 
+        color: #FFF;
+    }
+    &--testimonials {
+        background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+        background-size: cover;
     }
 }
