--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,11 +1,17 @@
 .page-section {
   padding: 1.2rem 0;
-  @mixin atMedium {
+  @mixin atLarge {
     padding: 4.5rem 0;
   }
-  &--no-b-padding-until-medium{
+  &--no-b-padding-until-medium {
     padding-bottom: 0;
-    @mixin atMedium{
+    @mixin atMedium {
+      padding-bottom: 4.5rem;
+    }
+  }
+  &--no-b-padding-until-large {
+    padding-bottom: 0;
+    @mixin atLarge {
       padding-bottom: 4.5rem;
     }
   }
